# oscaremr-mcp

./: .env.example  .gitignore  .mcp.json  404.html  CHANGELOG.md  CONTRIBUTING.md  EXPOSE_OSCAR_WSL_MARIADB.html  Install Oscar EMR MCP.cmd  OSCAR_DATABASE_SCHEMA.md  README.md  SECURITY.md  architecture.html  configuration.html  contributing.html  docusaurus.config.js  index.html  installation.html  mkdocs.yml  one-click-install.html  package-lock.json  package.json  pyproject.toml  security.html  sidebars.js  sitemap.xml  tools.html
.codex-plugin/: plugin.json
.cursor/: mcp.json
.github/workflows/: pages.yml
assets/css/: styles.9a9fbd61.css
assets/js/: 11c1a79e.a5992bff.js  17896441.d2d01d89.js  237.08039714.js  2b785902.4b86d7d9.js  3b8c55ea.897aee37.js  436.20b7fc3f.js  4d54d076.312a389f.js  5281b7a2.26c3969b.js  5e95c892.fb2d5cb6.js  99088dce.c36c4122.js  9c5f705b.497f1352.js  9ed00105.52a3dd49.js  a7b0ce31.25ec96cc.js  a7bd4aaa.69f40b4e.js  a94703ab.ef68e4db.js  aba21aa0.d7feccc9.js  c377a04b.0109bf48.js  dae3d3a0.ce502e25.js  db32d859.32535a02.js  f83d4345.1bf4c535.js  main.c47849b1.js  runtime~main.c43b4a17.js
clients/: claude-code.html  codex.html  cursor.html
docs/: EXPOSE_OSCAR_WSL_MARIADB.md  architecture.md  configuration.md  contributing.md  index.md  installation.md  one-click-install.md  security.md  tools.md
docs/clients/: claude-code.md  codex.md  cursor.md
scripts/: configure_oscar_mcp.ps1  generate_cursor_deeplink.py  install_claude_code_mcp.ps1  install_codex_local_plugin.ps1  install_codex_local_plugin.py  install_codex_plugin.ps1  install_cursor_mcp.ps1  install_cursor_mcp.py  install_oscar_emr_mcp_unix.sh  install_oscar_emr_mcp_windows.ps1  test_oscar_mcp_stream.ps1
skills/oscar-db-mcp/: SKILL.md
src/css/: custom.css
src/oscar_db_mcp/: __init__.py  configure.py  db.py  domain.py  server.py
src/oscar_db_mcp/emr/: __init__.py  base.py  billing.py  clinical.py  medications.py  patients.py  records.py  scheduling.py  workflow.py
tests/: test_domain_tools.py  test_plugin_package.py  test_project_structure.py  test_server_registry.py  test_sql_guardrails.py
